fix(button -> negative): corrects interior label background color to align with parent

--- a/components/button/index.css
+++ b/components/button/index.css
@@ -335,5 +335,9 @@ a.spectrum-Button {
 				forced-color-adjust: none;
 			}
 		}
+
+		&.spectrum-Button--negative .spectrum-Button-label {
+			forced-color-adjust: none;
+		}
 	}
 }
